# ollama-chat

./: .gitignore  Dockerfile  main_chat.py  pyproject.toml  test_ollama.py
.devcontainer/: devcontainer.json
chat/: create_database.py  generate_response.py  generate_response_gemma4.py  generate_response_mcp.py  mcp_config.json  parse_json.py  urls.csv
database/: create_database.py
database_gemma/: create_database.py  demo.py
